--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,10 @@ body {
     padding: 20px;
 }
 
+header {
+    text-align: center;
+}
+
 .container {
     display: flex;
     justify-content: space-between;
@@ -18,34 +22,42 @@ body {
 
 }
 
-.latest-news-section{
+.latest-news-section {
     background-color: white;
     padding: 20px;
     border-radius: 8px;
     width: 25%;
     text-align: center;
+
+
 }
-.main-article-section{
+
+.main-article-section {
     background-color: white;
     padding: 20px;
     border-radius: 8px;
     width: 40%;
-    text-align: center; 
+
 }
+
 .pictorial-news-section {
     background-color: white;
     padding: 20px;
     border-radius: 8px;
     width: 25%;
     text-align: center;
+
 }
 
 .latest-news-section ul {
     padding-left: 0;
+    list-style-type: none;
+
 }
 
 .latest-news-section li {
     margin: 10px 0;
+
 }
 
 .pictorial-news-section {
